fixing some line spacing

--- a/css/inforum.css
+++ b/css/inforum.css
@@ -106,7 +106,7 @@ h4 {
   font-weight: 400;
   font-size: 47px;
   color: #4A4A4A;
-  line-height: 54px;
+  line-height: 47px;
   letter-spacing: 12px;
   padding-top: 70px;
   padding-bottom: 10px;
@@ -117,7 +117,7 @@ h4 {
   text-transform:uppercase;
   font-size: 47px;
   color: #3498DB;
-  line-height: 35px;
+  line-height: 47px;
   font-weight: 800;
 }
 
@@ -235,7 +235,7 @@ h4 {
   font-weight: 300;
   font-size: 42px;
   color: #4A4A4A;
-  line-height: 54px;
+  line-height: 42px;
 }
 
 .three-up .connect {
@@ -243,7 +243,7 @@ h4 {
   text-transform:uppercase;
   font-size: 47px;
   color: #3498DB;
-  line-height: 35px;
+  line-height: 47px;
   font-weight: 800;
   margin-bottom:90px;
 }
